<resources>
    <string name="app_name">TrackLog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_traffic_title">实时交通</string>
    <string name="nav_satellite_title">卫星图</string>
    <string name="nav_normal_title">标准图</string>
    <string name="nav_3d_title">显示3D建筑</string>
    <string name="nav_item_title">属性</string>

    <string-array name="map_mode_array">
        <item>标准图</item>
        <item>卫星图</item>
    </string-array>

</resources>
